--- a/contact.html
+++ b/contact.html
@@ -7,29 +7,59 @@
    
   </head>
   <body style="background-color: lightgray;">
-    <div id="menubar">
-        <ul id="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li class="selected"><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </div>
+    <header>
+        <h1>Jackie's Portfolio</h1>
+        <br>
+      </header>
+  
+      <nav>
+          <div class="navbar">
+            <a href="index.html" target="_blank">Home</a>
+            <a href="experience.html" target="_blank">Experience</a>
+            <a href="skills.html" target="_blank">Skills</a> 
+            <a href="portfolio.html" target="_blank">Portfolio</a> 
+            <a href="resume.html" target="_blank">Resume</a> 
+            <a href="contact.html" target="_blank">Contact</a>
+            <a href="about.html" target="_blank">About</a> 
+          </div>
+      </nav>
+  <p>
+
+  </p> 
+
 
     <div id="content">
         <h1>Contact Me</h1>
-        <form action="#" method="post">
+        <form action="http://form-test.slccwebdev.com/form-contact.php" method="post" target="_blank">
             <div class="form_settings">
-                <p><span>Name</span><input class="contact" type="text" name="your_name" value="" /></p>
-                <p><span>Email Address</span>
-                    <input class="contact" type="text" name="your_email" value="" /></p>
-                <p><span>Comments</span>
-                    <textarea class="contact textarea" rows="8" cols="40" name="your_enquiry">
+                <p><label>Name: </label><input class="contact" type="text" name="name" /></p>
+                <p><label>Email Address: </label>
+                    <input class="contact" type="text" name="email" /></p>
+                 <p><label>Phone Number: </label>
+                     <input type="phone" name="phone" /></p>
+                <p><label>Comments: </label>
+                    <br>
+                    <textarea class="contact textarea" rows="8" cols="40" name="inquiry">
 Enter your comments here.
                     </textarea></p>
+                    <div>
+                        <p>Can I contact you?</p>
+                        <input id="yes" type="radio" name="contact-back" value="Yes">
+                        <label for="Yes">Yes</label>
+                        <input id="no" type="radio" name="contact-back" value="No">
+                        <label for="No">No</label>
+                    </div>
+                    <div>
+                        <p>Best Contact Method(s)</p>
+                        <input id="contactphone" type="checkbox" name="contact-phone" value="Phone">
+                        <label for='contactphone'>Phone</label>
+                        <input id="contactemail" type="checkbox" name="contact-email" value="Email">
+                        <label for='contactemail'>Email</label>
+                        <input id="contacttext" type="checkbox" name="contact-text" value="Text">
+                        <label for='contacttext'>Text</label>
+                    </div>
                 <p style="padding-top: 15px"><span>&nbsp;</span>
-                    <input class="submit" type="submit" name="contact_submitted" value="submit" /></p>
+                    <input class="submit" type="submit" name="contact_submitted" value="Submit" /></p>
                 
             </div>
 
